kube/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: bankingAppRegistryDev.azurecr.io/frontend-service:__IMAGE_TAG__
        ports:
        - containerPort: 5000 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP 
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
