kube/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: bankingappregistrydev.azurecr.io/notification-service:__IMAGE_TAG__
        ports:
        - containerPort: 5004 
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP 
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5004
