kube/transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: bankingappregistrydev.azurecr.io/transaction-service:__IMAGE_TAG__
        ports:
        - containerPort: 5003 
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  type: ClusterIP 
  selector:
    app: transaction-service
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5003
