kube/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: bankingAppRegistryDev.azurecr.io/user-service:__IMAGE_TAG__
        ports:
        - containerPort: 5001 
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  
  type: ClusterIP 
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5001
