kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  annotations:
    appgw.ingress.kubernetes.io/cookie-based-affinity:
spec:
  ingressClassName: azure-application-gateway 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
